restore build parallelism. cleanup. do not restore on genii